# crm_backend

./: .env  Cargo.toml
src/: ai_scoring.rs  assignment_engine.rs  config.rs  db_manager.rs  error.rs  main.rs  websocket.rs  workflow_engine.rs
src/api/: ai_scoring.rs  analytics.rs  attachments.rs  auth.rs  bulk_uploads.rs  contacts.rs  cti.rs  email_inbound.rs  field_definitions.rs  integrations.rs  interactions.rs  leads.rs  maintenance.rs  messaging.rs  mod.rs  opportunities.rs  sales_forms.rs  sales_marketing.rs  teams.rs  users.rs  workflow.rs
src/api/auth/: claims.rs
