[package]
name = "crm-backend"
version = "0.1.0"
edition = "2021"
description = "SMC CRM Backend — Axum + PostgreSQL"

[dependencies]
# Web
axum = { version = "0.7", features = ["json", "macros", "tokio", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal support
rust_decimal = { version = "1", features = ["serde"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"

# Config & env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }

# Redis (optional for caching/queue)
redis = { version = "0.24", optional = true }

[features]
default = []
redis = ["dep:redis"]
